--- a/roles/my_role/defaults/main.yml
+++ b/roles/my_role/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
 # defaults file for my_role
-my_path: "/tmp/test.txt"
-my_content: "Hello, world!\n"
+my_module_path: "/tmp/default_file.txt"
+my_module_content: "Default content from my_role\n"
